@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2022 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,9 +12,12 @@
  */
 package org.openhab.binding.pushover.internal.connection;
 
+import static org.openhab.binding.pushover.internal.PushoverBindingConstants.*;
+
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -24,6 +27,10 @@ import org.eclipse.jetty.client.api.ContentProvider;
 import org.eclipse.jetty.client.util.MultiPartContentProvider;
 import org.eclipse.jetty.client.util.PathContentProvider;
 import org.eclipse.jetty.client.util.StringContentProvider;
+import org.openhab.core.i18n.CommunicationException;
+import org.openhab.core.i18n.ConfigurationException;
+import org.openhab.core.io.net.http.HttpUtil;
+import org.openhab.core.library.types.RawType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -55,7 +62,7 @@ public class PushoverMessageBuilder {
     private static final int MAX_MESSAGE_LENGTH = 1024;
     private static final int MAX_TITLE_LENGTH = 250;
     private static final int MAX_DEVICE_LENGTH = 25;
-    private static final List<Integer> VALID_PRIORITY_LIST = Arrays.asList(-2, -1, 0, 1, 2);
+    private static final List<Integer> VALID_PRIORITY_LIST = List.of(-2, -1, 0, 1, 2);
     private static final int DEFAULT_PRIORITY = 0;
     public static final int EMERGENCY_PRIORITY = 2;
     private static final int MIN_RETRY_SECONDS = 30;
@@ -76,23 +83,23 @@ public class PushoverMessageBuilder {
     private @Nullable String urlTitle;
     private @Nullable String sound;
     private @Nullable String attachment;
-    private String contentType = DEFAULT_CONTENT_TYPE;
+    private @Nullable String contentType;
     private boolean html = false;
     private boolean monospace = false;
 
-    private PushoverMessageBuilder(String apikey, String user) throws PushoverConfigurationException {
+    private PushoverMessageBuilder(String apikey, String user) throws ConfigurationException {
         body.addFieldPart(MESSAGE_KEY_TOKEN, new StringContentProvider(apikey), null);
         body.addFieldPart(MESSAGE_KEY_USER, new StringContentProvider(user), null);
     }
 
     public static PushoverMessageBuilder getInstance(@Nullable String apikey, @Nullable String user)
-            throws PushoverConfigurationException {
-        if (apikey == null || apikey.isEmpty()) {
-            throw new PushoverConfigurationException("@text/offline.conf-error-missing-apikey");
+            throws ConfigurationException {
+        if (apikey == null || apikey.isBlank()) {
+            throw new ConfigurationException(TEXT_OFFLINE_CONF_ERROR_MISSING_APIKEY);
         }
 
-        if (user == null || user.isEmpty()) {
-            throw new PushoverConfigurationException("@text/offline.conf-error-missing-user");
+        if (user == null || user.isBlank()) {
+            throw new ConfigurationException(TEXT_OFFLINE_CONF_ERROR_MISSING_USER);
         }
 
         return new PushoverMessageBuilder(apikey, user);
@@ -163,7 +170,7 @@ public class PushoverMessageBuilder {
         return this;
     }
 
-    public ContentProvider build() throws PushoverCommunicationException {
+    public ContentProvider build() throws CommunicationException {
         if (message != null) {
             if (message.length() > MAX_MESSAGE_LENGTH) {
                 throw new IllegalArgumentException(String.format(
@@ -239,18 +246,31 @@ public class PushoverMessageBuilder {
         }
 
         if (attachment != null) {
-            File file = new File(attachment);
-            if (!file.exists()) {
-                throw new IllegalArgumentException(
-                        String.format("Skip sending the message as file '%s' does not exist.", attachment));
-            }
-            try {
-                body.addFilePart(MESSAGE_KEY_ATTACHMENT, file.getName(),
-                        new PathContentProvider(contentType, file.toPath()), null);
-            } catch (IOException e) {
-                logger.debug("IOException occurred - skip sending message: {}", e.getLocalizedMessage(), e);
-                throw new PushoverCommunicationException(
-                        String.format("Skip sending the message: %s", e.getLocalizedMessage()), e);
+            String localAttachment = attachment;
+            if (localAttachment.startsWith("http")) { // support data HTTP(S) scheme
+                RawType rawImage = HttpUtil.downloadImage(attachment, 10000);
+                if (rawImage == null) {
+                    throw new IllegalArgumentException(
+                            String.format("Skip sending the message as content '%s' does not exist.", attachment));
+                }
+                addFilePart(createTempFile(rawImage.getBytes()),
+                        contentType == null ? rawImage.getMimeType() : contentType);
+            } else if (localAttachment.startsWith("data:")) { // support data URI scheme
+                try {
+                    RawType rawImage = RawType.valueOf(localAttachment);
+                    addFilePart(createTempFile(rawImage.getBytes()),
+                            contentType == null ? rawImage.getMimeType() : contentType);
+                } catch (IllegalArgumentException e) {
+                    throw new IllegalArgumentException(String
+                            .format("Skip sending the message because data URI scheme is invalid: %s", e.getMessage()));
+                }
+            } else {
+                File file = new File(attachment);
+                if (!file.exists()) {
+                    throw new IllegalArgumentException(
+                            String.format("Skip sending the message as file '%s' does not exist.", attachment));
+                }
+                addFilePart(file.toPath(), contentType);
             }
         }
 
@@ -261,5 +281,26 @@ public class PushoverMessageBuilder {
         }
 
         return body;
+    }
+
+    private Path createTempFile(byte[] data) throws CommunicationException {
+        try {
+            Path tmpFile = Files.createTempFile("pushover-", ".tmp");
+            return Files.write(tmpFile, data);
+        } catch (IOException e) {
+            logger.debug("IOException occurred while creating temp file - skip sending the message: {}", e.getMessage(),
+                    e);
+            throw new CommunicationException(TEXT_ERROR_SKIP_SENDING_MESSAGE, e.getCause(), e.getLocalizedMessage());
+        }
+    }
+
+    private void addFilePart(Path path, @Nullable String contentType) throws CommunicationException {
+        try {
+            body.addFilePart(MESSAGE_KEY_ATTACHMENT, path.toFile().getName(),
+                    new PathContentProvider(contentType == null ? DEFAULT_CONTENT_TYPE : contentType, path), null);
+        } catch (IOException e) {
+            logger.debug("IOException occurred while adding content - skip sending the message: {}", e.getMessage(), e);
+            throw new CommunicationException(TEXT_ERROR_SKIP_SENDING_MESSAGE, e.getCause(), e.getLocalizedMessage());
+        }
     }
 }
